[package]
name = "solitaire"
version = "0.2.1"
authors = ["Swampsoft <https://github.com/Swampsoft>"]

[features]
default = []
profiling = ["cpuprofiler"]


[dependencies.ggez]
version = "0.5"
#features = ["cargo-resource-root"]

[dependencies]
cpuprofiler = { version = "0.0.3", optional = true }
env_logger = "0.8"
log = "0.4"
rand = "0.7"
rodio = "0.9"
