[package]
name = "solitaire"
version = "0.3.0"
edition = "2018"
authors = ["Swampsoft <https://github.com/Swampsoft>"]

[features]
default = []
profiling = ["cpuprofiler"]


[dependencies.ggez]
version = "0.10"
#features = ["cargo-resource-root"]

[dependencies]
cpuprofiler = { version = "0.0.4", optional = true }
env_logger = "0.11"
log = "0.4"
nalgebra = { version = "0.35", features = ["convert-mint"] }
rand = "0.10"
